--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,3 +1,11 @@
+input::-webkit-datetime-edit{ color: transparent; }
+input:focus::-webkit-datetime-edit{ color: #000; }
+
+.md-stepper-error {
+  display: none;
+}
+
+
 #app {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
