--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -177,3 +177,9 @@ input[type="number"] {
     color: rgba(0,0,0,0.54);
   }
 }
+
+.md-list-item-content {
+  @media (max-width: 400px) {
+    padding-left: 0;
+  }
+}
